# jj-python

./: README.md  pyproject.toml
src/jj/: __init__.py  _bookmark.py  _docker.py  _executor.py  _git.py  _operation.py  _parsing.py  _runner.py  _workspace.py  errors.py  models.py  repo.py
tests/: conftest.py  test_bookmark.py  test_docker.py  test_errors.py  test_git.py  test_integration.py  test_models.py  test_operation.py  test_parsing.py  test_repo.py  test_runner.py  test_workspace.py
