[project]
name = "jj"
version = "0.1.0"
description = "Pythonic wrapper over the jj CLI for scripting and automation"
readme = "README.md"
authors = [
    { name = "Varun Ursekar", email = "varun.ursekar@scale.com" }
]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
